--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>StockCamel Corner</title>
   </head>
   <body>
+    <script src="js/script.js></script>
     <h1>Welocme to my site!</h1>
     <p>This is my personal site for some stuff</p>
   </body>
